# sl-compiler

./: slak.cabal
doc/: grammar.txt  original_grammar.txt
src/: AST.hs  Main.hs  Options.hs  Output.hs  ParseLib.hs  Parser.hs  PrettyPrinter.hs  Printer.hs  Scoping.hs  Tokenizer.hs  Tokens.hs  Utility.hs  grammar
test/: ParserSpec.hs  TokenizerSpec.hs  factorial.sl
