name:             slak
version:          0.0.0
synopsis:         Simple Language Kompiler
build-type:       Simple
cabal-version:    >= 1.10

executable spl
  default-language: Haskell2010
  ghc-options:
    -Wall

  build-depends:
      base

  hs-source-dirs:
    src

  main-is:
    Main.hs
	
test-suite spec
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  main-is:
    Spec.hs
  ghc-options:
    -Wall
  hs-source-dirs:
    src,test
  build-depends:
      base
    , hspec
    , QuickCheck